kubernetes/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    name: myapp
  
#   kubectl get pods --namespace=myapp
