kubernetes/Daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: flask-app-daemonset
spec:
  selector:
    matchLabels:
      name: flask-app-daemonset
  template:
    metadata:
      labels:
        name: flask-app-daemonset
    spec:
      containers:
      - name: flask-app-container
        image: flask-app-testing
        imagePullPolicy: Never

#  kubectl get daemonsets   
#  kubectl describe daemonset flask-app-daemonset
