kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app

spec:
  replicas: 5
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: nginx1
          image: nginx:latest
          ports:
             - containerPort: 80
        - name: flask-app-container
          image: flask-app-testing
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /mnt/data
              name: persistent-volume
          ports:
            - containerPort: 5000
              protocol: TCP
      volumes:
      - name: persistent-volume
        persistentVolumeClaim:
          claimName: pvclaim1
        

#  kubectl get deploy
