kubernetes/flask_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app
spec:
  containers:
    - name: flask-app-container
      image: flask-app-testing
      imagePullPolicy: Never
    - name: nginx1
      image: nginx:latest

#   kubectl get pod
#   kubectl logs flask-app-8569bc947b-cvxmg
