kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask-app

#  kubectl get svc
#  minikube service flask-app-service --url
