kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service1
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  - port: 22
    targetPort: 22
    name: ssh
    protocol: TCP
  selector:
    app: flask-app
